"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-07-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-22:
	  Minor util test updates for better diagnostics.  
	  stacktrace.cc, static_trace.cc: inserted local-static declarations
		of std::ios_base::Init to guarantee proper iostream
		initialization ordering during global static inits.  
		This is a hard-to-trigger latent bug, only possibly triggered
		during global initialization diagnostics.  
	  Added missing REQUIRES_STACKTRACE_STATIC_INIT to 
		local_static_store_test.cc.


	* HACKT-00-01-04-main-00-79-21:
	  Added another parser hack script to accommodate bison-2.1, 
		which uses some preprocessor variable YYENABLE_NLS
		without defining it a priori.  Damn you, bison.  
	  This snapshot tested against apple-gcc4 (build 5341) for the 
		first time and found one utility library test failure:
		local_static_store_test.  
		Suspect compiler bug, investigation pending.


2006-06-28	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-20:
	  Constified return pointer for unroll_resolve_rvalues of
		param_expr's, should be read-only for copy-on-write.  


	* HACKT-00-01-04-main-00-79-19:
	  Documentation only.  


2006-06-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-18:
	  No source revision, documentation patch only.  


2006-06-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-17-merged-CHP-02-14:
	  Merged CHP work branch, includes:
		CHP footprint unrolling
		copy-on-write unroll-resolution of nonmeta expressions
		Many minor CHP and channel bug fixes.  
	  Handful of test cases updated as a result of object size changes.  


2006-06-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-03-CHP-02-14:
	  Cleaned up all outstanding devel_switches. 
	  Cross-checked against gcc-4.x.